--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="router.js"></script>
 
     <script>
-      EmberHandlebarsLoader.loadTemplates(['posts', 'application', 'headline1']);
+      EmberHandlebarsLoader.loadTemplates(['posts', 'application', 'headline1', 'headline2', 'headline3', 'headline4']);
 
     </script>
   </head>
