Add carousel feature and bootstrap js files to make it work.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <head>
     <title>Bustle</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <script src="libs/jquery-1.11.2.js"></script>
     <script src="libs/ember-template-compiler-1.10.0.js"></script>
@@ -12,10 +14,10 @@
 
     <script src="bustle.js"></script>
     <script src="router.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <script>
       EmberHandlebarsLoader.loadTemplates(['posts', 'application', 'headline1', 'headline2', 'headline3', 'headline4']);
-
     </script>
   </head>
   <body>
