--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <script>
-      EmberHandlebarsLoader.loadTemplates(['posts', 'application', 'headline1', 'headline2', 'headline3', 'headline4']);
+      EmberHandlebarsLoader.loadTemplates(['posts', 'application', 'headline1', 'headline2', 'headline3', 'headline4', 'contact','about', 'monty-info', 'ben-info']);
     </script>
   </head>
   <body>
