--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="bustle.js"></script>
     <script src="router.js"></script>
+    <script src='controllers/about.js'></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <script>
